[metadata]
name = python_runner
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Helper for running python code indirectly
url = http://github.com/alexmojaki/python_runner
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = python_runner
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
include_package_data = True
tests_require = 
    pytest
    snoop

[options.extras_require]
tests = 
    pytest
    snoop

[coverage:run]
relative_files = True
